@@ -2784,6 +2784,13 @@ To create a new, empty mimetype please see libraries/transformations/template_ge
     on the official phpMyAdmin-homepage.
 </p>
 
+<h4>
+    [3.9] I get error messages when using "--sql_mode=ANSI" for the MySQL server
+</h4>
+<p>
+    When MySQL is running in ANSI-compatibility mode, there are some major differences in how SQL is structured (see http://www.mysql.com/doc/en/ANSI_mode.html). Most important of all, the quote-character (") is interpreted as an identifier quote character and not as a string quote character, which makes many internal phpMyAdmin operations into invalid SQL statements. There is no workaround to this behaviour. News to this item will be posted in Bug report <a href="https://sourceforge.net/tracker/index.php?func=detail&amp;aid=816858&amp;group_id=23067&amp;atid=377408">#816858</a>
+</p>
+
 <a name="faqmultiuser"></a><br />
 <h3>[4. ISPs, multi-user installations ]</h3>
 
