@@ -6,6 +6,8 @@ $Id$
 $Source$
 
 2003-11-04 Garvin Hicking <me@supergarv.de>
+    * Documentation.html: Added known limitation about ANSI-mode
+      (Bug #816858)
     * libraries/transformations/text_plain__dateformat.inc.php3:
       Bug #835252: Now allow more timestamps. Minor modification of a patch
       submitted by anonymous poster. Thanks!
